# pyplugins

./: README.md  pyproject.toml
plugins/radical/: pyproject.toml
plugins/radical/radical/: __init__.py
plugins/radical/tests/: test_super_s.py
src/ornithology/: __init__.py
src/pyplugins/: __init__.py  art.py
tests/: test_pyplugins.py
