[project]
name = "pyplugins"
version = "0.1.0"
description = "Toy project for playing around with entry points and plugins"
authors = [{name = "Liam Pattinson"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.entry-points."pyplugins.templates"]
bird = "ornithology:bird"

[build-system]
requires = ["setuptools > 58.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
